# image-interpolation-cuda

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  compareTile.py  main.cpp  mainSingleKernel.cu  mainthrust.cu  plot.py  test10.sh  testAll.sh
commonlib/: vector_math.cuh  vector_math.h
cpu/: CMakeLists.txt  cpu  main_cpu.cpp  main_cv_cpu.cpp
cpu_cv/: CMakeLists.txt
gpu/: CMakeLists.txt  gpu  main_gpu.cu
gpu_cv/: CMakeLists.txt  gpu_cv  main_cv_gpu.cpp
gpu_texture/: CMakeLists.txt  gpu_texture  main_gpu_texture.cu
